# ObligationAggregator

./: .gitignore  DEVELOPMENT_PLAN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  deploy-verify.yml
api/: index.py
docs/: deploy-vercel.md
docs/specs/: 00-overview.md  01-data-model.md  02-adapter-contract.md  03-state-machine.md  04-provenance.md  05-eu-pipeline.md  06-copyrighted-obligations.md  07-multi-tenancy.md
src/oblag/: __init__.py  ai.py  auth.py  browserfetch.py  byol.py  catalog.py  cli.py  config.py  linking.py  maintenance.py  milestones.py  netguard.py  notify.py  oscal.py  provenance.py  scheduler.py  scope.py  snapshots.py  storage.py  structure.py  versions.py  versionsuggest.py  watch.py
src/oblag/adapters/: __init__.py  aicpa.py  base.py  cellar.py  cis.py  cppa.py  eba.py  edpb.py  esma.py  federal_register.py  have_your_say.py  hitrust.py  iso_catalog.py  legiscan.py  nerc.py  nist_csrc.py  oeil.py  pci_ssc.py  regulations_gov.py  sitemap_base.py
src/oblag/core/: assertions.py  linker.py  reducer.py  runner.py  statemap.py  transitions.py
src/oblag/db/: models.py  session.py
src/oblag/web/: api.py  app.py  auth_routes.py  byol_routes.py  deps.py  html.py  internal.py  serialize.py  watchlists.py
tests/: conftest.py  test_admin_token.py  test_api.py  test_auth.py  test_browser_sources.py  test_catalog_expansion.py  test_circia_benchmark.py  test_copyrighted_layer.py  test_eu_pipeline.py  test_federal_register.py  test_have_your_say.py  test_linker.py  test_m6_features.py  test_m9_vercel.py  test_models.py  test_nist_csrc.py  test_notify.py  test_performance.py  test_provenance.py  test_reducer.py  test_regulations_gov.py  test_reliability.py  test_scope.py  test_snapshots.py  test_transitions.py  test_version_suggest.py  test_watch_milestones.py  test_watchlists_api.py
tests/fixtures/aicpa/: sitemap.xml
tests/fixtures/cellar/: acts_aiact_window.json  proposals_window.json
tests/fixtures/cis/: advisories.rss  blog.rss
tests/fixtures/cppa/: regulations.html
(+40 files in other folders)
