[project]
name = "oblag"
version = "0.4.5"
description = "ObligationAggregator: open-source regulatory & framework change-intelligence for GRC engineers"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Hoover Products Corporation" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
    "defusedxml>=0.7",
    # core, not an extra: Vercel git builds install [project] dependencies only
    # (build log: "Installing required dependencies from pyproject.toml") — as an
    # extra the driver was absent and the deployed function crashed on import
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
# kept for compatibility with documented `pip install .[postgres]` invocations
postgres = ["psycopg[binary]>=3.1"]
pdf = ["pypdf>=4.2"]
browser = ["playwright>=1.45"]

[project.scripts]
oblag = "oblag.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oblag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["error::DeprecationWarning:oblag.*"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM108"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI/Typer dependency-injection idioms are call-in-default by design
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Form", "fastapi.File", "typer.Option", "typer.Argument"]

[tool.mypy]
python_version = "3.11"
packages = ["oblag"]
mypy_path = "src"
ignore_missing_imports = true
check_untyped_defs = true
